[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "larch-lib"
version = "1.0.22"
description = "A collection of useful code shared in the larch namespace"
authors = [
    { name = "kochelmonster", email = "kochelmonster@users.noreply.github.com" }
]
license = { text = "MIT" }
keywords = ["library"]
requires-python = ">=3.7"

[project.urls]
Homepage = "http://example.com/HelloWorld/"

[tool.setuptools.packages.find]
where = ["."]
include = ["larch*", "larch.lib*"]

[project.optional-dependencies]
dev = [
    "sarge",
    "coverage"
    "gevent",
    "pyyaml",
    "psutil"
]
